src/com/laneve/bytecode/parser/BytecodeParser.java
// Generated from Bytecode.g4 by ANTLR 4.4
package com.laneve.bytecode.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BytecodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__114=1, T__113=2, T__112=3, T__111=4, T__110=5, T__109=6, T__108=7, 
		T__107=8, T__106=9, T__105=10, T__104=11, T__103=12, T__102=13, T__101=14, 
		T__100=15, T__99=16, T__98=17, T__97=18, T__96=19, T__95=20, T__94=21, 
		T__93=22, T__92=23, T__91=24, T__90=25, T__89=26, T__88=27, T__87=28, 
		T__86=29, T__85=30, T__84=31, T__83=32, T__82=33, T__81=34, T__80=35, 
		T__79=36, T__78=37, T__77=38, T__76=39, T__75=40, T__74=41, T__73=42, 
		T__72=43, T__71=44, T__70=45, T__69=46, T__68=47, T__67=48, T__66=49, 
		T__65=50, T__64=51, T__63=52, T__62=53, T__61=54, T__60=55, T__59=56, 
		T__58=57, T__57=58, T__56=59, T__55=60, T__54=61, T__53=62, T__52=63, 
		T__51=64, T__50=65, T__49=66, T__48=67, T__47=68, T__46=69, T__45=70, 
		T__44=71, T__43=72, T__42=73, T__41=74, T__40=75, T__39=76, T__38=77, 
		T__37=78, T__36=79, T__35=80, T__34=81, T__33=82, T__32=83, T__31=84, 
		T__30=85, T__29=86, T__28=87, T__27=88, T__26=89, T__25=90, T__24=91, 
		T__23=92, T__22=93, T__21=94, T__20=95, T__19=96, T__18=97, T__17=98, 
		T__16=99, T__15=100, T__14=101, T__13=102, T__12=103, T__11=104, T__10=105, 
		T__9=106, T__8=107, T__7=108, T__6=109, T__5=110, T__4=111, T__3=112, 
		T__2=113, T__1=114, T__0=115, CLASS=116, ENUM=117, INDEX=118, ALOAD=119, 
		ILOAD=120, ISTORE=121, ASTORE=122, REFNUM=123, NAT=124, INT=125, DEC=126, 
		THIS=127, STRING=128, Identifier=129, CLASSFILE=130, LAST=131, MD5=132, 
		COMPILED=133, ENCLOSINGMETHOD=134, SOURCE=135, MINOR=136, MAJOR=137, FLAGS=138, 
		DESCRIPTOR=139, EXCEPTIONTABLE=140, FROMTO=141, FROMTONUMBERS=142, LINENUMBERTABLE=143, 
		LINENUMBERTABLECONTENT=144, LOCALVARIABLETABLE=145, LOCALVARIABLECONTENT=146, 
		LOCALVARIABLELINE=147, STACKMAPTABLE=148, FRAMETYPE=149, OFFSETDELTA=150, 
		LOCALS=151, STACK=152, STACKLOCALARGSSIZE=153, EXCEPTION=154, THROWS=155, 
		WS=156, COMMENT=157, LINE_COMMENT=158;
	public static final String[] tokenNames = {
		"<INVALID>", "'Float'", "'iconst_1'", "'dup'", "'char'", "'if_acmpeq'", 
		"'athrow'", "'^'", "'if_icmple'", "'int'", "','", "'throws'", "'if_icmplt'", 
		"'iconst_2'", "'abstract'", "'boolean'", "'monitorexit'", "'long'", "'ireturn'", 
		"'<'", "']'", "'protected'", "'ifne'", "'pop'", "'putstatic'", "'ldc2_w'", 
		"'if_icmpeq'", "'strictfp'", "'native'", "'iconst_3'", "'of'", "'Long'", 
		"';'", "'Integer'", "'}'", "'iinc'", "'if_icmpge'", "'''", "'monitorenter'", 
		"'areturn'", "'invokespecial'", "'l'", "'bipush'", "'if_icmpgt'", "'ifnonnull'", 
		"'Utf8'", "'Fieldref'", "'getstatic'", "'aconst_null'", "'aload'", "'istore'", 
		"'iconst_4'", "'putfield'", "':'", "'['", "'NameAndType'", "'public'", 
		"'!'", "')'", "'isub'", "'imul'", "'ifge'", "'private'", "'iload'", "'iconst_5'", 
		"'new'", "'float'", "'ifnull'", "'ifeq'", "'void'", "'{'", "'byte'", "'= '", 
		"'{}'", "'irem'", "'('", "'if_icmpne'", "'aastore'", "'astore'", "'idiv'", 
		"'implements'", "'Code:'", "'ifgt'", "'iconst_m1'", "'ifle'", "'static'", 
		"'iadd'", "'ldc_w'", "'anewarray'", "'final'", "'Methodref'", "'invokestatic'", 
		"'/'", "'return'", "'\\'", "'goto'", "'Double'", "'Class'", "'extends'", 
		"'?'", "'short'", "'double'", "'synchronized'", "'InterfaceMethodref'", 
		"'.'", "'iflt'", "'iconst_0'", "'ldc'", "'if_acmpne'", "'getfield'", "'Constant pool:'", 
		"'invokevirtual'", "'>'", "'%'", "'InnerClasses:'", "'-'", "'class'", 
		"'enum'", "INDEX", "ALOAD", "ILOAD", "ISTORE", "ASTORE", "REFNUM", "NAT", 
		"INT", "DEC", "'this'", "'String'", "Identifier", "CLASSFILE", "LAST", 
		"MD5", "COMPILED", "ENCLOSINGMETHOD", "SOURCE", "MINOR", "MAJOR", "FLAGS", 
		"DESCRIPTOR", "EXCEPTIONTABLE", "FROMTO", "FROMTONUMBERS", "LINENUMBERTABLE", 
		"LINENUMBERTABLECONTENT", "LOCALVARIABLETABLE", "LOCALVARIABLECONTENT", 
		"LOCALVARIABLELINE", "STACKMAPTABLE", "FRAMETYPE", "OFFSETDELTA", "LOCALS", 
		"STACK", "STACKLOCALARGSSIZE", "EXCEPTION", "THROWS", "WS", "COMMENT", 
		"LINE_COMMENT"
	};
	public static final int
		RULE_classfile = 0, RULE_classDec = 1, RULE_classModifier = 2, RULE_innerClass = 3, 
		RULE_fields = 4, RULE_fieldModifier = 5, RULE_fieldName = 6, RULE_constantPool = 7, 
		RULE_tableEntries = 8, RULE_tableEntry = 9, RULE_constantAndInfo = 10, 
		RULE_methodDeclaration = 11, RULE_methodModifier = 12, RULE_methodHeader = 13, 
		RULE_result = 14, RULE_type = 15, RULE_primitiveType = 16, RULE_numericType = 17, 
		RULE_integralType = 18, RULE_floatingPointType = 19, RULE_referenceType = 20, 
		RULE_packageAndClassName = 21, RULE_methodDeclarator = 22, RULE_methodName = 23, 
		RULE_formalParameters = 24, RULE_formalParameter = 25, RULE_throws_ = 26, 
		RULE_exceptionTypeList = 27, RULE_exceptionType = 28, RULE_methodBody = 29, 
		RULE_instructionLine = 30, RULE_instruction = 31, RULE_ref = 32, RULE_num = 33, 
		RULE_identifierExtended = 34;
	public static final String[] ruleNames = {
		"classfile", "classDec", "classModifier", "innerClass", "fields", "fieldModifier", 
		"fieldName", "constantPool", "tableEntries", "tableEntry", "constantAndInfo", 
		"methodDeclaration", "methodModifier", "methodHeader", "result", "type", 
		"primitiveType", "numericType", "integralType", "floatingPointType", "referenceType", 
		"packageAndClassName", "methodDeclarator", "methodName", "formalParameters", 
		"formalParameter", "throws_", "exceptionTypeList", "exceptionType", "methodBody", 
		"instructionLine", "instruction", "ref", "num", "identifierExtended"
	};

	@Override
	public String getGrammarFileName() { return "Bytecode.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BytecodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ClassfileContext extends ParserRuleContext {
		public InnerClassContext innerClass(int i) {
			return getRuleContext(InnerClassContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public TerminalNode EOF() { return getToken(BytecodeParser.EOF, 0); }
		public ConstantPoolContext constantPool() {
			return getRuleContext(ConstantPoolContext.class,0);
		}
		public List<FieldsContext> fields() {
			return getRuleContexts(FieldsContext.class);
		}
		public List<InnerClassContext> innerClass() {
			return getRuleContexts(InnerClassContext.class);
		}
		public ClassDecContext classDec() {
			return getRuleContext(ClassDecContext.class,0);
		}
		public FieldsContext fields(int i) {
			return getRuleContext(FieldsContext.class,i);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public ClassfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).enterClassfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).exitClassfile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitClassfile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassfileContext classfile() throws RecognitionException {
		ClassfileContext _localctx = new ClassfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classfile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(70); classDec();
			setState(72);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(71); innerClass();
				}
			}

			setState(74); constantPool();
			setState(75); match(T__45);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76); fields();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(83); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(82); methodDeclaration();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(85); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(87); match(T__81);
			setState(89);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(88); innerClass();
				}
			}

			}
			setState(91); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDecContext extends ParserRuleContext {
		public PackageAndClassNameContext ilmio;
		public ClassModifierContext classModifier() {
			return getRuleContext(ClassModifierContext.class,0);
		}
		public TerminalNode ENUM() { return getToken(BytecodeParser.ENUM, 0); }
		public PackageAndClassNameContext packageAndClassName(int i) {
			return getRuleContext(PackageAndClassNameContext.class,i);
		}
		public TerminalNode CLASS() { return getToken(BytecodeParser.CLASS, 0); }
		public List<PackageAndClassNameContext> packageAndClassName() {
			return getRuleContexts(PackageAndClassNameContext.class);
		}
		public ClassDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).enterClassDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).exitClassDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitClassDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDecContext classDec() throws RecognitionException {
		ClassDecContext _localctx = new ClassDecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if (_la==T__101 || _la==T__59 || _la==T__30 || _la==T__26) {
				{
				setState(93); classModifier();
				}
			}

			setState(96);
			_la = _input.LA(1);
			if ( !(_la==CLASS || _la==ENUM) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(97); ((ClassDecContext)_localctx).ilmio = packageAndClassName(0);
			setState(100);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(98); match(T__17);
				setState(99); packageAndClassName(0);
				}
			}

			setState(112);
			_la = _input.LA(1);
			if (_la==T__35) {
				{
				{
				setState(102); match(T__35);
				setState(103); packageAndClassName(0);
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__105) {
					{
					{
					setState(105); match(T__105);
					setState(106); packageAndClassName(0);
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassModifierContext extends ParserRuleContext {
		public ClassModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).enterClassModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).exitClassModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitClassModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassModifierContext classModifier() throws RecognitionException {
		ClassModifierContext _localctx = new ClassModifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classModifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !(_la==T__101 || _la==T__59 || _la==T__30 || _la==T__26) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InnerClassContext extends ParserRuleContext {
		public List<RefContext> ref() {
			return getRuleContexts(RefContext.class);
		}
		public RefContext ref(int i) {
			return getRuleContext(RefContext.class,i);
		}
		public InnerClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).enterInnerClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).exitInnerClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitInnerClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerClassContext innerClass() throws RecognitionException {
		InnerClassContext _localctx = new InnerClassContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_innerClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(T__1);
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				switch (_input.LA(1)) {
				case T__30:
					{
					setState(117); match(T__30);
					setState(121); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						setState(121);
						switch (_input.LA(1)) {
						case T__43:
							{
							setState(118); match(T__43);
							}
							break;
						case REFNUM:
							{
							setState(119); ref();
							}
							break;
						case T__85:
							{
							setState(120); match(T__85);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						setState(123); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__85 || _la==T__43 || _la==REFNUM );
					}
					break;
				case REFNUM:
					{
					setState(125); ref();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(128); match(T__83);
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__30 || _la==REFNUM );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldsContext extends ParserRuleContext {
		public List<FieldModifierContext> fieldModifier() {
			return getRuleContexts(FieldModifierContext.class);
		}
		public FieldNameContext fieldName() {
			return getRuleContext(FieldNameContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FieldModifierContext fieldModifier(int i) {
			return getRuleContext(FieldModifierContext.class,i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).enterFields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).exitFields(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitFields(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__101) | (1L << T__94) | (1L << T__59) | (1L << T__53))) != 0) || _la==T__30 || _la==T__26) {
				{
				{
				setState(133); fieldModifier();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139); type();
			setState(140); fieldName();
			setState(141); match(T__83);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldModifierContext extends ParserRuleContext {
		public ClassModifierContext classModifier() {
			return getRuleContext(ClassModifierContext.class,0);
		}
		public FieldModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).enterFieldModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BytecodeListener ) ((BytecodeListener)listener).exitFieldModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitFieldModifier(this);
			else return visitor.visitChildren(this);
		}
	}
